# shop

./: .env.example  .gitignore  .tmp-airdrop.json  README.md  all_assets_and_ipfs_paths  amplify.yml  card_nft_2_figure_videos.json  cdn_paths  deployment-plan.md  firebase.json  firestore.indexes.json  firestore.rules  implementation_review.md  index.html  knip.json  package-lock.json  package.json  plan.md  plan_clean.md  plan_compliance_findings_1.md  plan_compliance_findings_2.md  plan_gaps_1.md  plan_gaps_2.md  plan_gaps_3.md  plan_gaps_4.md  renderer.html  review-issues.md  review_issues.md  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tools.json  tsconfig.tsbuildinfo  vite.config.ts  wip.md  wrangler.jsonc
collections/: test.json
docs/: multi-drop-migration-plan.md
functions/: .env.example  metaplex-foundation-mpl-bubblegum-5.0.2.tgz  package-lock.json  package.json  tsconfig.json
helpers/: batch_render.py  process_movs_for_safari.sh  render_videos.sh
onchain/: Anchor.toml  Cargo.lock.v4.bak  Cargo.toml
onchain/programs/box_minter/: Cargo.toml
onchain/programs/box_minter/src/: lib.rs
public/: .assetsignore  site.webmanifest
scripts/: convert-alpha-video.sh  create-collection.ts  create-tree.ts  deploy-all-box-minter.ts  deploy-all-onchain.ts  deploy-amplify.ts  deploy-box-minter.ts  deploy-cloudflare.ts  derive-collection.ts  exportCollectionFiles.ts  getTokenHolders.ts  keygen.js  newDrop.ts  owners.csv  remotely.cjs  repo-clean.sh  setMintPrices.ts  startMint.ts  upgrade-onchain.ts
src/: App.tsx  CardNft2UnrevealedApp.tsx  (+11 more)
(+275 files in other folders)
