[package]
name = "box_minter"
version = "0.1.0"
description = "mons.shop box minter – on-chain mint + supply cap for MPL Core (uncompressed) assets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "box_minter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
solana = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']


